2017-10-31  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.css (textarea):
	Add "textarea" style.

	* tryXpath/popup/popup.html:
	Chenge some input elements to textarea.


2017-10-26  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js: 
	Rename setContextInfo -> setContentInfo.
	Rename requestSetContextInfo -> requestSetContentInfo.

	* tryXpath/background/try_xpath_background.js:
	Rename requestSetContextInfo -> requestSetContentInfo.
	Rename setContextInfo -> setContentInfo.

2017-10-14  larissa9839  <larissa9839@gmail.com>

	* tryXpath/manifest.json:
	"strict_min_version": "55.0.0" -> "52.0"

2017-10-12  larissa9839  <larissa9839@gmail.com>

	* tryXpath/css/try_xpath_insert.css:
	Modify some css.
	Add the css which related [data-tryxpath-frame-ancestor] selector.

2017-10-11  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Modify setMainAttrs to set frameAncestor attribute.

2017-10-10  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js: 
	Add frameAncestor property to attributes.
	Define setMainAttrs function.
	Modify genericListener.listeners.execute.

	* tryXpath/background/try_xpath_background.js: 
	Add frameAncestor property to attributes.

	* tryXpath/pages/options.js:
	Define frameAncestorAttr variable.
	Add frameAncestor property to defaultAttributes.
	Modify this file. This file handle frameAncestor attribute.
	
	* tryXpath/pages/options.html:
	Add frame-ancestor-attribute input field.

2017-10-09  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_functions.js:
	Modify getFrameAncestry function.

2017-10-08  larissa9839  <larissa9839@gmail.com>

	* tryXpath/scripts/try_xpath_content.js:
	Change the way to check the frameDesignation key.
	Modify getFrames function.

	* tryXpath/pages/options.js:
	Add data-tryxpath-frame attribute to defaultAttributes.
	Define frameAttr variable.